Refactor CORS configuration: update allowed origins and methods, enable credentials, and clean up comments